# seng468-day-trading

./: .gitignore  README.md  Sample_test_script2.jmx  api.test.ts  bun.lockb  cleanup.sh  docker-compose.yml  flushall.sh  flushdb.sh  package.json  testEnvContainer  testEnvSystem
TestRun3/: InitialSetup.jmx  UserThreadTest.jmx  test-run-3.bash
TestRun3/Config/: stockIds.csv
TestRun3/UserFiles/: UserCreds_50000.csv
TestRun3/jmeter/: 10k_results.error.log.csv  InitialSetup.jmx  UserThreadTest.jmx
TestRun3/result2s/: index.html  statistics.json
TestRun3/results/: index.html  statistics.json
TestRun3/results10k/: index.html  statistics.json
TestRun3/results10kInit/: index.html  statistics.json
TestRun3/results12k/: index.html  statistics.json
TestRun3/results12kInit/: index.html  statistics.json
TestRun3/results15k/: index.html  statistics.json
TestRun3/results15kInit/: index.html  statistics.json
TestRun3/results17k/: index.html  statistics.json
TestRun3/results17kInit/: index.html  statistics.json
TestRun3/results1k/: index.html  statistics.json
TestRun3/results1kInit/: index.html  statistics.json
TestRun3/results2/: index.html  statistics.json
nginx/: nginx.conf
results/: index.html  statistics.json
scripts/: createUserCreds.py
services/matching-engine/: Cargo.toml  Dockerfile  README.md
services/matching-engine/src/: consumers.rs  handlers.rs  main.rs  matching_pq.rs  models.rs  order_service.rs  rabbitmq.rs  state.rs
tests/: auth.test.ts  engine.test.ts  overload.ts  setup.test.ts  transaction.test.ts
tests/utils/: index.ts  (+1 more)
(+232 files in other folders)
